Advancements in lessons

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>WEBPAGE #1</title>
+
   </head>
   <body>
-    <h1>My First Webpage</h1>
+    <h1>My First Webpage </h1>
     <h2>Written with the guidance of Epicodus</h2>
 
     <p>This is my first webpage</p>
